objects/Login_History__c/Login_History__c.object-meta.xml
<CustomObject>
    <label>Login History</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>