objects/Login_History__c/fields/CFS_Cut_Off_From__c.field-meta.xml
<CustomField>
    <fullName>CFS_Cut_Off_From__c</fullName>
    <label>CFS Cut Off From</label>
    <type>Date</type>
</CustomField>