objects/Login_History__c/fields/CFS_Cut_Off_To__c.field-meta.xml
<CustomField>
    <fullName>CFS_Cut_Off_To__c</fullName>
    <label>CFS Cut Off To</label>
    <type>Date</type>
</CustomField>