objects/Login_History__c/fields/Country_of_POL__c.field-meta.xml
<CustomField>
    <fullName>Country_of_POL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of POL</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Login History (Country of POL)</relationshipLabel>
    <relationshipName>Login_History1</relationshipName>
    <type>Lookup</type>
</CustomField>