objects/Login_History__c/fields/Country_POD__c.field-meta.xml
<CustomField>
    <fullName>Country_POD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of POD</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Login History</relationshipLabel>
    <relationshipName>Login_History</relationshipName>
    <type>Lookup</type>
</CustomField>