objects/Login_History__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POL</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>Login History</relationshipLabel>
    <relationshipName>Login_History</relationshipName>
    <type>Lookup</type>
</CustomField>