objects/Login_History__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From date</label>
    <type>Date</type>
</CustomField>