objects/Login_History__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POD</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>Login History (POD)</relationshipLabel>
    <relationshipName>Login_History1</relationshipName>
    <type>Lookup</type>
</CustomField>