objects/Login_History__c/fields/S_I_Cut_Off_From__c.field-meta.xml
<CustomField>
    <fullName>S_I_Cut_Off_From__c</fullName>
    <label>S/I Cut Off From</label>
    <type>Date</type>
</CustomField>