objects/Login_History__c/fields/S_I_Cut_Off_To__c.field-meta.xml
<CustomField>
    <fullName>S_I_Cut_Off_To__c</fullName>
    <label>S/I Cut Off To</label>
    <type>Date</type>
</CustomField>