objects/Login_History__c/fields/Stuffing_Place__c.field-meta.xml
<CustomField>
    <fullName>Stuffing_Place__c</fullName>
    <label>Stuffing Place</label>
    <length>50</length>
    <type>Text</type>
</CustomField>