objects/Login_History__c/fields/Times_clicking__c.field-meta.xml
<CustomField>
    <fullName>Times_clicking__c</fullName>
    <label>Times clicking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>