objects/Login_History__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User.</label>
    <referenceTo>UserRegistration__c</referenceTo>
    <relationshipLabel>Login History</relationshipLabel>
    <relationshipName>Login_History</relationshipName>
    <type>Lookup</type>
</CustomField>